# Compilation_principle

./: README.md
server/: CMakeLists.txt
server/include/: defs.h  lexicalAnalyzer.h  parserDefs.h
server/jsonFiles/: lexicalAns.json  parseAns.json  semanticAns.json
server/src/: lexicalToParser.cpp  main.cpp
server/src/LexicalAnalyzer/: lexical.cpp
server/src/LexicalAnalyzer/classSet/: lexicalAnalyzer.cpp
server/src/Parser/: parse.cpp
server/tableFiles/: constant.table.json  reservedWords.table.json  symbol.table.json
sever/inFiles/: Symbol.in  opr.json
sever/include/: lexicalAnalyzer.h  reservedWords.h
sever/source/: code.source
sever/src/LexicalAnalyzer/classSet/: lexicalAnalyzer.cpp  reservedWords.cpp
zzyOnlineIDE/: package-lock.json  package.json  webpack.config.js
zzyOnlineIDE/client/lib/: superagent.js
zzyOnlineIDE/client/views/index/: IndexView.jsx
zzyOnlineIDE/client/views/lexical/: LexicalView.css  LexicalView.jsx
zzyOnlineIDE/client/views/parser/: ParserView.css  ParserView.jsx
zzyOnlineIDE/client/views/run/: RunView.css  RunView.jsx
zzyOnlineIDE/public/compiler/: Makefile
zzyOnlineIDE/public/compiler/inFiles/: ReservedWords.in
zzyOnlineIDE/public/javascripts/: IndexView.bunndle.js  LexicalView.bunndle.js  ParserView.bunndle.js  RunView.bunndle.js
zzyOnlineIDE/server/: app.js
zzyOnlineIDE/server/routes/: index.js  lexical.js  parser.js  run.js  users.js
zzyOnlineIDE/server/views/: index.ejs  lexical.ejs  parser.ejs  receive.ejs  run.ejs
zzyOnlineIDE/webpack/: webpack.client.config.js  webpack.server.config.js
(+38 files in other folders)
